WIP - Implementing Vue scheme to admin control panel

--- a/src/publish/resources/sass/Just/_styles.scss
+++ b/src/publish/resources/sass/Just/_styles.scss
@@ -33,6 +33,12 @@ html, body {
      display: none;
      padding: 15px;
  }
+
+.settingsContent{
+    background-color: white;
+    padding: 20px 10px;
+    overflow-y: auto;
+}
  
 #cropping{
     z-index: 1100;
