--- a/src/publish/resources/sass/Just/app.scss
+++ b/src/publish/resources/sass/Just/app.scss
@@ -13,4 +13,7 @@
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 
+//Chosen-JS
+@import "~chosen-js/chosen";
+
 @import "styles";
