--- a/src/publish/resources/sass/Just/app.scss
+++ b/src/publish/resources/sass/Just/app.scss
@@ -16,6 +16,8 @@
 //Chosen-JS
 @import "~chosen-js/chosen";
 
+@import "~vue-select/src/scss/vue-select.scss";
+
 @import "styles";
 
 @import "../settings";
